Update Lessons in ICT (2nd Quarter).html

--- a/Lessons in ICT (2nd Quarter).html
+++ b/Lessons in ICT (2nd Quarter).html
@@ -107,21 +107,24 @@
 
        <div id="section1" class="content">
 <h1 align="center"> Lesson 1 </h1>
-<p> The image below shows one of the important part of lesson 1. </p> <br>
+<p> The image below shows one of the important part of lesson 1. </p> 
 <p align="center"> <img src="lesson 2.1.jpg"alt="lesson 1"height="450px"width="500px"> </p>
     </div>
 
        <div id="section2" class="content">
 <h1 align="center"> Lesson 2 </h1>
-<p> The picture below shows one of the significant part of lesson 2. </p> <br> 
-<p align="center"> <img src="lesson 2.2.jpg"alt="lesson 2"height="450px"width="500px"> </p>     
+<p> The picture below shows one of the significant part of lesson 2. </p>  
+<p align="center"> <img src="lesson 2.2.jpg"alt="lesson 2"height="450px"width="500px"> </p> <br> <br>
+<p> An example code of the important lesson is given below </p>
+<p align="center"> <img src="lesson 2.2 bo.jpg"alt="lesson 2 bo"height="450px"width="500px"> </p>
     </div>
 
        <div id="section3" class="content">
 <h1 align="center"> Lesson 3 </h1>
-<p> The picture below this text shows one of the significant part of lesson 3. </p> <br> 
-<p align="center"> <img src="lesson 2.3.jpg"alt="lesson 3"height="450px"width="500px"> </p>
-        
+<p> The picture below this text shows one of the significant part of lesson 3. </p>  
+<p align="center"> <img src="lesson 2.3.jpg"alt="lesson 3"height="450px"width="500px"> </p> <br> <br>
+<p> An example code of the important lesson is provided below </p>
+<p align="center"> <img src="lesson 2.3 bo.jpg"alt="lesson 3 bo"height="450px"width="500px"> </p>
     </div>
 
        <div id="section4" class="content">
